--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "^15.2.2",
     "@angular/platform-browser-dynamic": "^15.2.2",
     "@angular/router": "^15.2.2",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "ngx-print": "^1.3.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.5.0",
     "zone.js": "~0.11.4"
